# evolving-cart-patterns

./: PATTERNS.md  PROBLEMS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/ai-log/: phase1.md  phase2.md  phase3.md
docs/diagrams/: phase0-before.mmd  phase1-after.mmd  phase2-architecture.mmd  phase3-final-architecture.mmd
src/evolving_cart_patterns/: __init__.py  cart.py  checkout.py  commands.py  discounts.py  factories.py  money.py  payments.py  products.py
tests/: test_cart_commands.py  test_cart_phase0.py  test_checkout_facade.py  test_discount_strategies.py  test_payment_adapter.py  test_product_factory.py
