[project]
name = "evolving-cart-patterns"
version = "0.1.0"
description = "Design patterns homework showing an evolving e-commerce cart."
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
